welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:40: error: type mismatch;
 found   : Unit
 required: Boolean
    if(dir==Direction.EST) {
    ^