welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  while(end())
  {
    serpent()
  }
}

def serpent() {
  if (!estFaceMur())
  {
    avance()
  }
  else if(getDirection()==Direction.OUEST)
  {
    droite()
    avance()
    droite()
  }
  else if(getDirection()==Direction.EST)
  {
    gauche()
    avance()
    gauche()
  }
}

def end():Boolean = {
  var mur = false
  var dir:Direction = Direction.EST
  dir = getDirection()
  if(estFaceMur())
  {
    if(dir==Direction.OUEST) {
      droite()
      mur = estFaceMur()
      gauche()
      return mur
    }
    if(dir==Direction.EST) {
      gauche()
      mur = estFaceMur()
      droite()
      return mur
    }
  }
  else
  {
    return estFaceMur()
  }
}